<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_movie">

    <!-- Fragments Filmes -->
    <fragment
        android:id="@+id/nav_movie"
        android:name="com.movies.ui.movie.MovieFragment"
        android:label="@string/movies"
        tools:layout="@layout/movie_fragment" >

        <action
            android:id="@+id/action_movie_detail"
            app:destination="@id/nav_movie_datail"/>

    </fragment>

    <fragment
        android:id="@+id/nav_movie_datail"
        android:name="com.movies.ui.movie.MovieDetailFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_movie_detail" />
    <!-- Fim Fragments Filmes -->

    <!-- Fragments Gallery -->
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.movies.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_gallery_detail"
            app:destination="@id/nav_gallery_datail"/>

    </fragment>

    <fragment
        android:id="@+id/nav_gallery_datail"
        android:name="com.movies.ui.gallery.GalleryDetailFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_detail_gallery" />
    <!-- Fim Fragments Gallery -->

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.movies.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.movies.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />



</navigation>